<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/color"
        android:icon="@drawable/ic_palette_24dp"
        android:title="@string/menuitem_color"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/line_width"
        android:icon="@drawable/ic_brush_24dp"
        android:title="@string/menuitem_line_width"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/background_color"
        android:icon="@drawable/ic_background"
        android:title="@string/menuitem_background"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/upload_image"
        android:icon="@drawable/ic_upload_image"
        android:title="@string/menuitem_upload"
        app:showAsAction="always"></item>

    <item
        android:id="@+id/delete_drawing"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/menuitem_delete"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/menuitem_save"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/print"
        android:icon="@drawable/ic_print_24dp"
        android:title="@string/menuitem_print"
        app:showAsAction="ifRoom"></item>
</menu>