<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorDialogGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true">

    <!--TextView for the alpha color range-->
    <TextView
        android:id="@+id/alphaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="0"
        android:text="@string/label_alpha" />

    <!--SeekBar for the alpha color range-->
    <SeekBar
        android:id="@+id/alphaSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0"
        android:max="255" />

    <!--TextView for the red color range-->
    <TextView
        android:id="@+id/redTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="1"
        android:text="@string/label_red" />

    <!--SeekBar for the red color range-->
    <SeekBar
        android:id="@+id/redSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="1"
        android:max="255" />

    <!--TextView for the green color range-->
    <TextView
        android:id="@+id/greenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="2"
        android:text="@string/label_green" />

    <!--SeekBar for the green color range-->
    <SeekBar
        android:id="@+id/greenSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2"
        android:max="255" />

    <!--TextView for the blue color range-->
    <TextView
        android:id="@+id/blueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:layout_row="3"
        android:text="@string/label_blue" />

    <!--SeekBar for the blue color range-->
    <SeekBar
        android:id="@+id/blueSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="3"
        android:max="255" />

    <!--View for all the color ranges-->
    <View
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/color_view_height"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal" />
</GridLayout>